--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -14,12 +14,14 @@ dependencies = [
   "azure-storage-blob",
   "beautifulsoup4",
   "docopt",
-  "duckdb",
+  "duckdb>=1.4.3",
   "Faker",
+  "geopy",
   "h11>=0.14.0",
   "httpx",
   "Jinja2>= 3.1.4",
   "openai>=1.96.0",
+  "pandas", 
   "psutil",
   "pydantic-core>=2.41.0",
   "pytest-asyncio>=1.0.0",
