--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -20,9 +20,11 @@ dependencies = [
   "h11>=0.14.0",
   "httpx",
   "Jinja2>= 3.1.4",
+  "jupyter>=1.1.1",
+  "matplotlib>=3.10.0",
   "m26>=0.3.2",
   "openai>=1.96.0",
-  "pandas", 
+  "pandas>=2.3.0", 
   "psutil",
   "pydantic-core>=2.41.0",
   "pytest-asyncio>=1.0.0",
@@ -36,6 +38,9 @@ dependencies = [
   "tiktoken>=0.12.0",
   "watchdog"
 ]
+
+
+
 requires-python = ">=3.13"
 authors = [
   {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
@@ -43,7 +48,7 @@ authors = [
 maintainers = [
   {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
 ]
-description = "The 'zero-to-AI' series of lessons at 3Cloud"
+description = "The 'zero-to-AI' series of lessons at 3Cloud/Cognizant"
 readme = "readme.md"
 license = "MIT"
 license-files = ["LICEN[CS]E.*"]
